gcc/

PR middle-end/66568
	* cfgexpand.c (expand_return): Handle missing bounds.
	(expand_gimple_stmt_1): Likewise.
	* tree-chkp.c (chkp_expand_zero_bounds): New.
	* tree-chkp.h (chkp_expand_zero_bounds): New.

gcc/testsuite/

	PR middle-end/66568
	* gcc.target/i386/mpx/pr66568.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@224601 138bc75d-0d04-0410-961f-82ee72b054a4